cluster/gitops/system-controllers/kubelet-csr-approver/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kubelet-csr-approver
specs:
  - description: kubelet-csr-approver
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: kubelet-csr-approver
    egress:
      # Access to k8s api to approve CSRs
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
    ingress:
      - fromEntities:
          # Kubelet for healthcheck
          - host
        toPorts:
          - ports:
              - port: metrics
                protocol: TCP
